syntax = "proto3";

package proto;

message ClientQueryMessage {
  bytes image = 1;
  double fx = 2;
  double fy = 3;
  double cx = 4;
  double cy = 5;
  uint32 width = 6;
  uint32 height = 7; 
}
